--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ header .contact p{
 /* who we are */
 
 .who-we-are{
-    margin-top: 80px;
+    margin: 80px;
 }
 
 .who-we-are-img{
@@ -197,3 +197,79 @@ header .contact p{
     color: #666666;
     margin: 20px 0;
 } 
+/* news-feed area */
+
+.news-feed{
+    background: #F6F6F6;
+}
+
+.news-feed .first-card{
+    position: relative;
+    margin-top: 20px;
+}
+.news-feed .first-card>img{
+   width: 100%;
+}
+.first-card-body{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    color:#F6F6F6;
+    width: 100%;
+    height: 100%;
+    background: #27ae60bf;
+    color: #fff;
+    padding: 60px 30px;
+
+}
+.first-card-body p{
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 65px;
+    font-family: 'Open Sans', sans-serif;
+
+}
+.first-card-body span{
+    font-size: 16px;
+    display: flex;
+
+
+}
+.card{
+    border: 1px solid #D8D8D8;
+    margin-top: 20px;
+
+}
+.card-img{
+    overflow: hidden;
+    width: auto;
+    height: 157px;
+}
+.card .card-img img{
+    width: 100%;
+}
+.card .card-body{
+    padding: 18px 25px;
+    height: 122px;
+    overflow: hidden;
+
+}
+.card .card-body .date{
+    font-size: 10px;
+    margin-bottom: 21px;
+    display: block;
+    font-family: 'Open Sans', sans-serif;
+    color: #666666;
+
+}
+.card .card-body h2{
+    font-size: 16px;
+    font-weight: 600;
+    font-family: 'Open Sans', sans-serif;
+    color: #242C42;
+    height: 42px;
+    overflow: hidden;
+
+
+}
